# vuedo

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  compose.yml  dist-workspace.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
deploy/: docker-compose.yml
docs/: reference.md
examples/react/: .gitignore  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
examples/react/src/: server.ts
examples/react/templates/: invoice.tsx
examples/react/templates/components/: MoneyAmount.tsx
examples/react/templates/pos/: pos-order.tsx
examples/react/templates/views/: invoice.tsx
examples/react/templates/views/pos/: pos-order.tsx
examples/react/test/: app.test.ts
examples/react/test/pdf/: invoice.e2e.test.ts  pos-order.e2e.test.ts
examples/vue/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
examples/vue/assets/: app.css
examples/vue/pdf-test/: body.html  footer.html  header.html  run.mjs
examples/vue/src/: server.ts
examples/vue/templates/: invoice.vue
examples/vue/templates/components/: MoneyAmount.vue
examples/vue/templates/pos/: pos-footer.vue  pos-header.vue  pos-order.vue
examples/vue/templates/views/: invoice-footer.vue  invoice-header.vue  invoice.vue
examples/vue/templates/views/pos/: pos-header.vue  pos-order.vue
examples/vue/test/: app.test.ts
examples/vue/test/pdf/: invoice.e2e.test.ts  measurement.e2e.test.ts  pos-order.e2e.test.ts
pdf-test/: run.mjs
src/: cli.rs  compress.rs  config.rs  context.rs  db.rs  docker.rs  doctor.rs  env.rs  git.rs  global.rs  infra.rs  kebab.rs  main.rs  project.rs  requirements.rs  server.ts  storage.rs  ui.rs  update.rs  utils.rs  zip.rs
src/commands/: all.rs  branch.rs  checkout.rs  db.rs  git.rs  mod.rs  start.rs  stop.rs
src/doctor/: docker.rs  mod.rs  project.rs  requirements.rs
src/setup/: mod.rs  project.rs
src/snapshot/: create.rs  mod.rs  restore.rs  types.rs  utils.rs
src/ui/: components.rs  mod.rs
templates/: invoice-header.vue
templates/pos/: pos-order.vue
test/: pdf.e2e.test.ts
test/pdf/: pos-order.e2e.test.ts
vuedo/: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
vuedo/deploy/: Dockerfile  docker-compose.yml
vuedo/docs/: reference.md
vuedo/src/: dev-server.ts  entry-server.ts  server-prod.ts  server.ts
vuedo/src/dev/: preview-main.ts
vuedo/src/pdf-templates/: Invoice.vue  InvoiceFooter.vue  InvoiceHeader.vue
vuedo/src/pdf-templates/Pos/: PosHeader.vue
vuedo/src/server/: index.ts
vuedo/src/templates/: InvoiceFooter.vue  InvoiceHeader.vue
vuedo/test/: app.test.ts  pdf.e2e.test.ts  render.dev.test.ts
