[package]
name = "hbt"
description = "A command-line tool for interacting with the Hummingbird development stack."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/humtravel/hbt-cli"

[dependencies]
aws-sdk-s3 = "1.69.0"
axoupdater = "0.9.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.4"
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.0.35"
itertools = "0.13.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.2"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = "z"
lto = true
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
