[package]
name = "hbt"
description = "A command-line tool for interacting with the Hummingbird development stack."
version = "0.2.1"
edition = "2024"
resolver = "3"
repository = "https://github.com/humtravel/hbt-cli"
homepage = "https://github.com/humtravel/hbt-cli"

[dependencies]
axoupdater = "0.9.0"
bollard = "0.18.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.4"
console = "0.15.10"
dialoguer = "0.11.0"
directories = "6.0.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
eyre = "0.6.12"
flate2 = "1.0.35"
futures = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
itertools = "0.13.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.2"
indicatif = "0.17.11"
rand = "0.9.0"

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = "z"
lto = true
panic = "unwind"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
